@@ -715,6 +715,16 @@ EDUCATIONLORE=<ABILITY>\
 Those with this ability is adept at learning, and gains an additional practice point \
 every level.
 
+EMBELLISH=EMBELLISHING
+EMBELLISHING=<ABILITY>\
+Usage    : EMBELLISH LIST/[RECIPE] [ITEM NAME]\n\r\
+Example  : embellish list\n\r\
+Example  : embellish "a simple buckle" a knitted weapon belt\n\r\
+This skill allows the player to embellish an item by adding some \
+decorative detail to the item.  Not all recipes work with all items, \
+and a bit of extra material will be required.  Multiple embellishments \
+are not permitted, and all embellishments are permanent.
+
 EMBROIDER=EMBROIDERING
 EMBROIDERING=<ABILITY>\
 Usage    : EMBROIDER [ITEM NAME] [MESSAGE]\n\r\
